// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CSOStatus Account Exists 1`] = `
<DocumentFragment>
  <div>
    <p>
      Account exists! Proceed
    </p>
    <div>
      <button
        class="normal-white btn"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots CSOStatus Account Exists Mobile 1`] = `
<DocumentFragment>
  <div>
    <p>
      Account exists! Proceed
    </p>
    <div>
      <button
        class="normal-white btn"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots CSOStatus No Account Exists 1`] = `
<DocumentFragment>
  <div>
    <p>
      Account does not exist, form will be here
    </p>
    <div>
      <button
        class="normal-white btn"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Storyshots CSOStatus No Account Exists Mobile 1`] = `
<DocumentFragment>
  <div>
    <p>
      Account does not exist, form will be here
    </p>
    <div>
      <button
        class="normal-white btn"
        type="button"
      >
        Cancel
      </button>
    </div>
  </div>
</DocumentFragment>
`;
